--- a/public/app.css
+++ b/public/app.css
@@ -489,6 +489,7 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .mx-1\.5{margin-left:0.375rem;margin-right:0.375rem}
 .mx-2{margin-left:0.5rem;margin-right:0.5rem}
 .mx-3{margin-left:0.75rem;margin-right:0.75rem}
+.mx-auto{margin-left:auto;margin-right:auto}
 .-mb-52{margin-bottom:-13rem}
 .-mt-1{margin-top:-0.25rem}
 .-mt-62{margin-top:-248px}
@@ -563,6 +564,7 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .h-full{height:100%}
 .h-lg-banner{height:428px}
 .h-px{height:1px}
+.h-screen{height:100vh}
 .max-h-0{max-height:0px}
 .max-h-8{max-height:2rem}
 .max-h-\[300px\]{max-height:300px}
@@ -684,6 +686,7 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .bg-inherit{background-color:inherit}
 .bg-primary{background-color:#414042;background-color:var(--color-primary)}
 .bg-red-400{--tw-bg-opacity:1;background-color:rgba(248, 113, 113, 1);background-color:rgba(248, 113, 113, var(--tw-bg-opacity))}
+.bg-slate-900{--tw-bg-opacity:1;background-color:rgba(15, 23, 42, 1);background-color:rgba(15, 23, 42, var(--tw-bg-opacity))}
 .bg-white{--tw-bg-opacity:1;background-color:rgba(255, 255, 255, 1);background-color:rgba(255, 255, 255, var(--tw-bg-opacity))}
 .bg-cover{background-size:cover}
 .bg-center{background-position:center}
@@ -750,6 +753,7 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .pt-6{padding-top:1.5rem}
 .pt-8{padding-top:2rem}
 .text-center{text-align:center}
+.text-right{text-align:right}
 .text-start{text-align:left}
 .text-end{text-align:right}
 .align-middle{vertical-align:middle}
@@ -5993,6 +5997,23 @@ button.swiper-pagination-bullet {
   transform-origin: center bottom;
   backface-visibility: hidden;
   overflow: hidden;
+}
+.imageSlider {
+  width: 146px !important;
+  height: 160px !important;
+}
+.imageSlider {
+  /* the parent */
+}
+.imageSlider img {
+  width: 100%;
+  height: 100%;
+}
+.imageSlider .slick-slide {
+  margin-left: 27px !important;
+}
+.imageSlider .slick-list {
+  margin-left: -27px !important;
 }
 .first\:rounded-t-md:first-child{border-top-left-radius:0.375rem;border-top-right-radius:0.375rem}
 .first\:pt-16:first-child{padding-top:4rem}
