--- a/src/views/layouts/master.twig
+++ b/src/views/layouts/master.twig
@@ -79,57 +79,68 @@
 | user.language.order                                | int      | Sort language in menu                                                                                    |
 #}
 <!DOCTYPE html>
-<html lang="{{ user.language.code }}" dir="{{ user.language.dir }}">
-<!-- بسم الله الرحمن الرحيم -->
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    {{ theme.settings.set('placeholder', 'images/placeholder.png') }}
-    {% hook 'head:start' %}
-    {% hook head %}
-    {% block styles %}{% endblock %}
-    <link rel="stylesheet" href="{{ 'app.css' | asset }}">
-    <link rel="stylesheet" href="{{ theme.font.path|cdn }}"/>
-    <link rel="stylesheet" href="{{ 'fonts/sallaicons.css'|cdn }}"/>
-    <style>
-        :root {
-            --font-main: '{{theme.font.name}}';
-            --color-primary: {{ theme.color.primary }};
-            --color-primary-dark: {{ theme.color.darker(0.15) }};
-            --color-primary-light: {{ theme.color.lighter(0.15) }};
-            --color-primary-reverse: {{ theme.color.reverse_text }};
-        }
-    </style>
-    {# tracking services, custom css feature. #}
-    {% hook 'head:end' %}
+<html
+	lang="{{ user.language.code }}" dir="{{ user.language.dir }}">
+	<!-- بسم الله الرحمن الرحيم -->
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		{{ theme.settings.set('placeholder', 'images/placeholder.png') }}
+		{% hook 'head:start' %}
+		{% hook head %}
+		{% block styles %}{% endblock %}
+		<link rel="stylesheet" href="{{ 'app.css' | asset }}">
+		<link rel="stylesheet" href="{{ theme.font.path|cdn }}"/>
+		<link rel="stylesheet" href="{{ 'fonts/sallaicons.css'|cdn }}"/>
+		<link
+		rel="stylesheet" type="text/css" href="{{ asset('slick-1.8.1/slick/slick.css') }}"/>
+		<!-- Add the slick-theme.css if you want default styling -->
+		<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="{{ asset('js/bootstrap.min.js') }}"></script>
+		<script src="{{ asset('slick-1.8.1/slick/slick.min.js') }}"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+		<style>:root
+		{
+			--font-main: '{{theme.font.name}}';
+			--color-primary: {{theme.color.primary}}
+			;
+			--color-primary-dark: {{theme.color.darker(0.15)}}
+			;
+			--color-primary-light: {{theme.color.lighter(0.15)}}
+			;
+			--color-primary-reverse: {{theme.color.reverse_text}}
+			;
+		}
+	</style>
+	{# tracking services, custom css feature. #}
+	{% hook 'head:end' %}
 </head>
 <body id="app" class="overflow-x-hidden {% hook 'body:classes' %} bg-gray-50
-  {{ theme.settings.get('footer_is_dark') ? ' footer-is-dark' : ' footer-is-light' }}
-  {{ theme.settings.get('topnav_is_dark') ? ' topnav-is-dark' : '' }}
-  {{ theme.settings.get('sticky_add_to_cart') ? ' is-sticky-product-bar' : '' }}
-  ">
-<noscript>
-    To get full functionality of this site you need to enable JavaScript. Here is how
-    <a href="https://www.enable-javascript.com/" rel="noreferrer"
-       target="_blank">To enable JavaScript on webpage</a>.
-</noscript>
-<div class="app-inner flex flex-col min-h-full">
-    {% hook 'body:start' %}
-    {% component 'header.header' %}
-    {% block content %}{% endblock %}
-    {% component 'footer.footer' %}
-</div>
-{% hook 'body:end' %}
-<script defer src="{{ 'app.js' | asset }}"></script>
+		  {{ theme.settings.get('footer_is_dark') ? ' footer-is-dark' : ' footer-is-light' }}
+		  {{ theme.settings.get('topnav_is_dark') ? ' topnav-is-dark' : '' }}
+		  {{ theme.settings.get('sticky_add_to_cart') ? ' is-sticky-product-bar' : '' }}
+		  ">
+	<noscript>
+		To get full functionality of this site you need to enable JavaScript. Here is how
+		<a href="https://www.enable-javascript.com/" rel="noreferrer" target="_blank">To enable JavaScript on webpage</a>.
+	</noscript>
+	<div class="app-inner flex flex-col min-h-full">
+		{% hook 'body:start' %}
+		{% component 'header.header' %}
+		{% block content %}{% endblock %}
+		{% component 'footer.footer' %}
+	</div>
+	{% hook 'body:end' %}
+	<script defer src="{{ 'app.js' | asset }}"></script>
 
-{# Twilight Components #}
-<salla-offer-modal></salla-offer-modal>
-<salla-search></salla-search>
+	{# Twilight Components #}
+	<salla-offer-modal></salla-offer-modal>
+	<salla-search></salla-search>
 
-{% if user.type=='guest' %}
-    <salla-login-modal></salla-login-modal>
-{% endif %}
-{% block scripts %}{% endblock %}
-</body>
-</html>
+	{% if user.type=='guest' %}
+		<salla-login-modal></salla-login-modal>
+	{% endif %}
+	{% block scripts %}{% endblock %}
+</body></html>
